# ports_adapter_zbus

./: .gitignore  CLAUDE.md  CMakeLists.txt  PKL_ADAPTER_PLAN.md  README.md  README.rst  SERVICE_INFRASTRUCTURE_REVIEW.md  gdbinit  justfile  prj.conf  west.yml
adapters/: BatteryService+StorageService_adapter.c  CMakeLists.txt  Kconfig  TickService+UiService_adapter.c  debug_adapter.c
adapters/src/: Battery+Storage_zlet_adapter.c  BatteryService+StorageService_adapter.c  BatteryZephlet+StorageZephlet_adapter.c  Position+Battery_zlet_adapter.c  PositionZephlet+BatteryZephlet_adapter.c  Tick+Storage_zlet_adapter.c  Tick+Ui_zlet_adapter.c  TickService+StorageService_adapter.c  TickService+UiService_adapter.c  TickZephlet+StorageZephlet_adapter.c  TickZephlet+UiZephlet_adapter.c  ZletBattery+ZletStorage_adapter.c
docs/: REFACTOR_V3_PLAN.md
docs/v03_codegen_oracle/: README.md
modules/services/battery/: .copier-answers.yml  CMakeLists.txt  battery_service.c  battery_service.h  battery_service.proto  battery_service_impl.c
modules/services/battery/private/: battery_service_priv.h
modules/services/shared/: CMakeLists.txt  service.c  service.h  service.proto  service_iterables.ld
modules/services/shared/codegen/: PLAN.md  generate_adapter.py  generate_service.py  requirements.txt  zephyr_service_codegen.cmake
modules/services/shared/codegen/templates/: adapter.c.jinja  adapter_kconfig.jinja  service.c.jinja  service.h.jinja  service_impl.c.jinja
modules/services/shared/zephyr/: module.yml
modules/services/storage/: CMakeLists.txt
modules/services/storage/zephyr/: module.yml
modules/services/tamper_detection/: .copier-answers.yml  CMakeLists.txt  Kconfig  tamper_detection_service.c  tamper_detection_service.h  tamper_detection_service.proto
modules/services/tamper_detection/zephyr/: module.yml
modules/services/tick/: CMakeLists.txt  tick_service.c  tick_service.h  tick_service.proto  tick_service_impl.c
modules/services/tick/private/: tick_service_priv.h
modules/services/tick/zephyr/: module.yml
modules/services/ui/: CMakeLists.txt  ui_service.c  ui_service.h  ui_service.proto
scripts/: dod_v03.sh
services/battery/: CMakeLists.txt  Kconfig
services/shared/: CMakeLists.txt
services/shared/codegen/: PLAN.md  generate_adapter.py  generate_service.py  zephyr_service_codegen.cmake
services/shared/codegen/templates/: adapter.c.jinja  service.c.jinja  service_impl.c.jinja  service_priv.h.jinja
services/shared/codegen/zephyr_service_template/: copier.yml
services/shared/codegen/zephyr_service_template/template/{{ service_name_lower }}/: CMakeLists.txt.jinja  {{ service_name_lower }}_service.c.jinja
services/storage/: CMakeLists.txt  Kconfig  storage_service.c  storage_service.proto  storage_service_impl.c
services/tick/: CMakeLists.txt  Kconfig  tick_service.c
services/ui/: CMakeLists.txt  ui_service.c  ui_service_impl.c
services/ui/zephyr/: module.yml
src/: adapters.c  main.c  policies.c
src/adapters/: CMakeLists.txt  Kconfig
src/adapters/src/: Tampering+Ui_zlet_adapter_impl.c  Tick+Ui_zlet_adapter.c  Tick+Ui_zlet_adapter_impl.c  base_adapter.c
src/adapters/zephyr/: module.yml
src/tampering/: zlet_tampering.c  zlet_tampering.h  zlet_tampering.proto
src/tampering/tests/integration/: CMakeLists.txt
src/tampering/tests/integration/src/: test_tampering_integration.c
src/tampering/zephyr/: module.yml
src/tick/: zlet_tick.c  zlet_tick.h  zlet_tick.proto
src/tick/tests/integration/: prj.conf  testcase.yaml
src/tick/tests/integration/src/: test_tick_integration.c
src/ui/: zlet_ui.c  zlet_ui.h  zlet_ui.proto
src/ui/tests/integration/: CMakeLists.txt  testcase.yaml
src/ui/tests/integration/src/: test_ui_integration.c
src/zephlets/battery/: zlet_battery.c  zlet_battery.proto
src/zephlets/battery/tests/integration/: CMakeLists.txt  prj.conf  testcase.yaml
src/zephlets/position/: zlet_position.c  zlet_position.proto
src/zephlets/position/tests/integration/: CMakeLists.txt  prj.conf  testcase.yaml
src/zephlets/storage/: zlet_storage.c  zlet_storage.proto
src/zephlets/storage/tests/integration/: CMakeLists.txt  prj.conf  testcase.yaml
src/zephlets/storage/zephyr/: module.yml
src/zephlets/tampering/: CMakeLists.txt  Kconfig  zlet_tampering.c  zlet_tampering.proto
src/zephlets/tampering/tests/integration/: CMakeLists.txt  (+2 more)
src/zephlets/tick/: CMakeLists.txt  zlet_tick.c  zlet_tick.h  zlet_tick.proto  zlet_tick_interface.c  zlet_tick_interface.h
src/zephlets/tick/tests/integration/: CMakeLists.txt
src/zephlets/tick/tests/integration/src/: test_tick_integration.c
src/zephlets/ui/: CMakeLists.txt  zlet_ui.c  zlet_ui.proto
tests/common/: test_helpers.c  test_helpers.h
zephlets/battery/: .copier-answers.yml  CMakeLists.txt  Kconfig  battery_service.c  battery_zephlet.c  battery_zephlet.proto  zlet_battery.c  zlet_battery.proto
zephlets/battery/zephyr/: module.yml
zephlets/position/: CMakeLists.txt  Kconfig  position_zephlet.c  position_zephlet.proto  zlet_position.c
zephlets/position/zephyr/: module.yml
zephlets/sensor/: CMakeLists.txt  Kconfig  zlet_sensor.c  zlet_sensor.proto
zephlets/sensor/zephyr/: module.yml
zephlets/shared/: CMakeLists.txt  Kconfig  service.proto  zephlet.c  zephlet_options.proto
zephlets/shared/codegen/: generate_adapter.py  generate_zephlet.py  zephyr_zephlet_codegen.cmake
zephlets/shared/codegen/templates/: adapter.c.jinja  zephlet.c.jinja  zephlet.h.jinja  zephlet_impl.c.jinja  zephlet_priv.h.jinja
zephlets/shared/west/: west-commands.yml  zephlet_commands.py
zephlets/shared/zephyr/: module.yml
zephlets/storage/: CMakeLists.txt  Kconfig  storage_zephlet.c  storage_zephlet.proto  zlet_storage.c
zephlets/storage/zephyr/: module.yml
zephlets/tick/: CMakeLists.txt  Kconfig  tick_zephlet.c  tick_zephlet.proto  zlet_tick.c  zlet_tick.proto
zephlets/tick/tests/integration/: CMakeLists.txt  prj.conf  testcase.yaml
zephlets/tick/zephyr/: module.yml
zephlets/ui/: CMakeLists.txt  Kconfig  ui_zephlet.c  ui_zephlet.proto  zlet_ui.c
zephlets/ui/zephyr/: module.yml
(+19 files in other folders)
